--- a/.dvc/config
+++ b/.dvc/config
@@ -4,4 +4,4 @@
 ['remote "storage"']
     url = gdrive://15S0GXxXODnSb9La6GT3zX3ZUeV_eSz3F
     gdrive_use_service_account = true
-    gdrive_service_account_json_file_path = ../UsersASUSDesktopdvc-projecdvc.json
+    gdrive_service_account_json_file_path = C:/Users/ASUS/Desktop/dvc-projec/dvc.json
